--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
-  "name": "yosite",
-  "version": "0.0.0",
+  "name": "CMEP-site",
+  "version": "0.1.0",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/gmp26/grunt-panda.git"
+  },
   "dependencies": {},
   "devDependencies": {
     "grunt": "~0.4.1",
@@ -22,7 +26,8 @@
     "grunt-svgmin": "0.1.0",
     "grunt-recess": "~0.3.1",
     "grunt-concurrent": "~0.1.0",
-    "matchdep": "~0.1.1"
+    "matchdep": "~0.1.1",
+    "grunt-markdown-to-json": "~0.4.2"
   },
   "engines": {
     "node": ">=0.8.0"
