meeting2 slides update

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@ dist
 .tmp
 app/bower_components
 .DS_Store
+reference/slides/ITMeeting2.pdf
+reference/slides/ITMeeting2.html
+reference/slides/Development_process_v1.pdf
+
