--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "grunt-recess": "~0.3.1",
     "grunt-concurrent": "~0.1.0",
     "matchdep": "~0.1.1",
-    "grunt-markdown-to-json": "~0.4.2"
+    "grunt-markdown-to-json": "~0.4.2",
+    "grunt-panda": "~0.1.3"
   },
   "engines": {
     "node": ">=0.8.0"
