--- a/package.json
+++ b/package.json
@@ -25,11 +25,11 @@
     "grunt-mocha": "~0.3.0",
     "grunt-open": "~0.2.0",
     "grunt-svgmin": "0.1.0",
-    "grunt-recess": "~0.3.1",
+    "grunt-recess": "~0.3.3",
     "grunt-concurrent": "~0.1.0",
     "matchdep": "~0.1.1",
-    "grunt-markdown-to-json": "~0.4.2",
-    "grunt-panda": "~0.1.3"
+    "grunt-panda": ">=0.1.3",
+    "async": "~0.2.9"
   },
   "engines": {
     "node": ">=0.8.0"
