--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "type": "git",
     "url": "git://github.com/gmp26/grunt-panda.git"
   },
-  "dependencies": {},
+  "dependencies": {
+    "grunt-panda": ">=0.1.3",
+    "js-yaml": ">=2.1.0"
+  },
   "devDependencies": {
     "grunt": "~0.4.1",
     "grunt-contrib-copy": "~0.4.1",
