--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "grunt-svgmin": "0.1.0",
     "grunt-recess": "~0.3.3",
     "grunt-concurrent": "~0.1.0",
+    "grunt-livescript": "~0.5.0",
     "matchdep": "~0.1.1",
     "grunt-panda": ">=0.1.3",
     "async": "~0.2.9"
