--- a/.gitignore
+++ b/.gitignore
@@ -8,4 +8,8 @@ partials
 reference/slides/ITMeeting2.pdf
 reference/slides/ITMeeting2.html
 reference/slides/Development_process_v1.pdf
+app/*.html
+app/*/*.html
+app/!404.html
+app/!index.html
 
