changing generated site to mirror source folders

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,18 @@
 node_modules
 dist
 .tmp
-tmp/*
+tmp/
 app/bower_components
 .DS_Store
 partials
 reference/slides/ITMeeting2.pdf
 reference/slides/ITMeeting2.html
 reference/slides/Development_process_v1.pdf
-app/*.html
+app/pervasiveIdeas/
+app/resources/
+app/resourceTypes/
+app/stations/
+app/lines/
 app/*/*.html
 app/!404.html
 app/!index.html
-
