--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "grunt-livescript": "~0.5.0",
     "matchdep": "~0.1.1",
     "grunt-panda": ">=0.1.3",
-    "async": "~0.2.9"
+    "async": "~0.2.9",
+    "chai": "~1.7.0",
+    "grunt-regex-replace": "~0.2.5"
   },
   "engines": {
     "node": ">=0.8.0"
