--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "url": "git@github.com:CMEPorg/CMEP-site.git"
   },
   "dependencies": {
-    "grunt-panda": ">=0.1.3",
     "js-yaml": ">=2.1.0"
   },
   "devDependencies": {
@@ -32,10 +31,10 @@
     "grunt-concurrent": "~0.1.0",
     "grunt-livescript": "~0.5.0",
     "matchdep": "~0.1.1",
-    "grunt-panda": ">=0.1.3",
     "async": "~0.2.9",
     "chai": "~1.7.0",
-    "grunt-regex-replace": "~0.2.5"
+    "grunt-regex-replace": "~0.2.5",
+    "grunt-panda": ">=0.2.1"
   },
   "engines": {
     "node": ">=0.8.0"
