pulled in grunt-tubemap

--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "async": "~0.2.9",
     "chai": "~1.7.0",
     "grunt-regex-replace": "~0.2.5",
-    "grunt-panda": ">=0.2.1"
+    "grunt-panda": ">=0.2.1",
+    "grunt-tubemap": "git+ssh://git@github.com:CMEPorg/grunt-tubemap.git"
   },
   "engines": {
     "node": ">=0.8.0"
