--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "url": "git@github.com:CMEPorg/CMEP-site.git"
   },
   "dependencies": {
-    "js-yaml": ">=2.1.0"
+    "js-yaml": ">=2.1.0",
+    "mocha": "~1.11.0",
+    "chai": "~1.7.0",
+    "should": "~1.2.2"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
