removing grunt-tubemap dependency

--- a/package.json
+++ b/package.json
@@ -37,8 +37,7 @@
     "async": "~0.2.9",
     "chai": "~1.7.0",
     "grunt-regex-replace": "~0.2.5",
-    "grunt-panda": ">=0.2.1",
-    "grunt-tubemap": "git+ssh://git@github.com:CMEPorg/grunt-tubemap.git"
+    "grunt-panda": ">=0.2.1"
   },
   "engines": {
     "node": ">=0.8.0"
