--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "js-yaml": ">=2.1.0",
     "mocha": "~1.11.0",
     "chai": "~1.7.0",
-    "should": "~1.2.2"
+    "should": "~1.2.2",
+    "grunt-usemin": "~0.1.12"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
@@ -25,7 +26,7 @@
     "grunt-contrib-imagemin": "0.1.3",
     "grunt-contrib-livereload": "0.1.2",
     "grunt-rev": "~0.1.0",
-    "grunt-usemin": "~0.1.10",
+    "grunt-usemin": "~0.1.12",
     "grunt-regarde": "~0.1.1",
     "grunt-mocha": "~0.3.0",
     "grunt-open": "~0.2.0",
