removed generated tubemaps from git

--- a/.gitignore
+++ b/.gitignore
@@ -4,12 +4,13 @@ dist
 .tmp
 .clearance
 tmp/
-app/bower_components
 .DS_Store
 partials
 reference/slides/ITMeeting2.pdf
 reference/slides/ITMeeting2.html
 reference/slides/Development_process_v1.pdf
+app/bower_components
+app/images/tubemap.svg
 app/pervasiveIdeas/
 app/resources/
 app/resourceTypes/
