--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "async": "~0.2.9",
     "chai": "~1.7.0",
     "grunt-regex-replace": "~0.2.5",
-    "grunt-panda": ">=0.2.2",
+    "grunt-panda": "~0.2.3",
     "grunt-mocha-test": "~0.5.0"
   },
   "engines": {
