--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "chai": "~1.7.0",
     "grunt-regex-replace": "~0.2.5",
     "grunt-panda": "~0.2.3",
-    "grunt-mocha-test": "~0.5.0"
+    "grunt-mocha-test": "~0.5.0",
+    "css-parse": "~1.5.0"
   },
   "engines": {
     "node": ">=0.8.0"
