--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "grunt-rev": "~0.1.0",
     "grunt-usemin": "~0.1.12",
     "grunt-regarde": "~0.1.1",
-    "grunt-mocha": "~0.3.0",
     "grunt-open": "~0.2.0",
     "grunt-svgmin": "0.1.0",
     "grunt-recess": "~0.3.3",
@@ -40,8 +39,7 @@
     "chai": "~1.7.0",
     "grunt-regex-replace": "~0.2.5",
     "grunt-panda": "~0.2.3",
-    "grunt-mocha-test": "~0.5.0",
-    "css-parse": "~1.5.0"
+    "grunt-mocha-test": "~0.5.0"
   },
   "engines": {
     "node": ">=0.8.0"
