added tubeMap.png to gitignore, removed some debugging

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ reference/slides/ITMeeting2.pdf
 reference/slides/ITMeeting2.html
 reference/slides/Development_process_v1.pdf
 app/bower_components
+app/images/tubeMap.png
 app/images/tubemap.svg
 app/pervasiveIdeas/
 app/resources/
