--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "grunt-svgmin": "0.1.0",
     "grunt-recess": "~0.3.3",
     "grunt-concurrent": "~0.1.0",
-    "grunt-livescript": "~0.5.0",
+    "grunt-lsc": "~1.0.0",
     "matchdep": "~0.1.1",
     "async": "~0.2.9",
     "chai": "~1.7.0",
