--- a/bower.json
+++ b/bower.json
@@ -1,11 +1,12 @@
 {
   "name": "CMEP-site",
-  "version": "0.0.0",
+  "version": "0.2.0",
   "dependencies": {
     "bootstrap": "~2.3.0",
     "font-awesome": "~3.0.2",
     "modernizr": "~2.6.2",
-    "jquery": "~1.9.1"
+    "jquery": "~1.9.1",
+    "d3": "*"
   },
   "devDependencies": {}
 }
