--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "chai": "~1.7.0",
     "should": "~1.2.2",
     "grunt-usemin": "~0.1.12",
-    "color-string": "~0.1.2"
+    "color-string": "~0.1.2",
+    "cheerio": "~0.12.3"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
