--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
     "grunt-contrib-htmlmin": "0.1.3",
     "grunt-contrib-imagemin": "0.1.3",
     "grunt-contrib-livereload": "0.1.2",
+    "grunt-contrib-watch": "~0.5.3",
     "grunt-rev": "~0.1.0",
     "grunt-usemin": "~0.1.12",
-    "grunt-regarde": "~0.1.1",
     "grunt-open": "~0.2.0",
     "grunt-svgmin": "0.1.0",
     "grunt-recess": "~0.3.3",
@@ -41,7 +41,8 @@
     "grunt-regex-replace": "~0.2.5",
     "grunt-panda": "~0.2.5",
     "grunt-mocha-test": "~0.5.0",
-    "cheerio": "~0.12.3"
+    "cheerio": "~0.12.3",
+    "grunt-newer": "~0.5.4"
   },
   "engines": {
     "node": ">=0.8.0"
