--- a/package.json
+++ b/package.json
@@ -12,9 +12,7 @@
     "chai": "~1.7.0",
     "should": "~1.2.2",
     "grunt-usemin": "~0.1.12",
-    "color-string": "~0.1.2",
-    "cheerio": "~0.12.3",
-    "time-grunt": "~0.2.2"
+    "color-string": "~0.1.2"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
@@ -42,7 +40,8 @@
     "grunt-regex-replace": "~0.2.5",
     "grunt-panda": "~0.2.5",
     "grunt-mocha-test": "~0.5.0",
-    "cheerio": "~0.12.3"
+    "cheerio": "~0.12.3",
+    "grunt-timer": "~0.1.1"
   },
   "engines": {
     "node": ">=0.8.0"
