--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "grunt-panda": "~0.2.5",
     "grunt-mocha-test": "~0.5.0",
     "cheerio": "~0.12.3",
-    "grunt-newer": "~0.5.4"
+    "grunt-newer": "~0.5.4",
+    "grunt-timer": "~0.1.1"
   },
   "engines": {
     "node": ">=0.8.0"
