--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "chai": "~1.7.0",
     "should": "~1.2.2",
     "grunt-usemin": "~0.1.12",
-    "color-string": "~0.1.2"
+    "color-string": "~0.1.2",
+    "grunt-timer": "~0.1.1"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
@@ -41,8 +42,7 @@
     "grunt-panda": "~0.2.5",
     "grunt-mocha-test": "~0.5.0",
     "cheerio": "~0.12.3",
-    "grunt-newer": "~0.5.4",
-    "grunt-timer": "~0.1.1"
+    "grunt-newer": "~0.5.4"
   },
   "engines": {
     "node": ">=0.8.0"
