--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "grunt-panda": "~0.2.5",
     "grunt-mocha-test": "~0.5.0",
     "cheerio": "~0.12.3",
-    "grunt-newer": "~0.5.4"
+    "grunt-newer": "~0.5.4",
+    "grunt-touch": "~0.1.0"
   },
   "engines": {
     "node": ">=0.8.0"
